serviceability/attach/RemovingUnixDomainSocketTest.java fails with AttachNotSupportedException: Unable to open socket file

XMLWordPrintable

    • b24

        Snippets from the log file:

        #section:main
        ----------messages:(8/247)----------
        command: main RemovingUnixDomainSocketTest
        reason: User specified action: run main RemovingUnixDomainSocketTest
        Mode: agentvm
        Agent id: 2
        Timeout refired 480 times
        Timeout information:
        --- Timeout information end.
        elapsed time (seconds): 845.544

        <snip>

        ----------System.err:(16/2048)----------
        Command line: ['/scratch/mesos/jib-master/install/jdk-14+26-1198/macosx-x64-debug.jdk/jdk-14/fastdebug/bin/java' '-XX:MaxRAMPercentage=12' '-cp' '/scratch/mesos/slaves/ec52e70b-7270-4911-a8ea-ec00a8b5dfb8-S31089/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/4b543924-8b3b-4481-9aa0-e804c33a33f9/runs/411cea41-268a-4d88-8fea-1805f4e2d1c4/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_serviceability/classes/1/serviceability/attach/RemovingUnixDomainSocketTest.d:/scratch/mesos/slaves/ec52e70b-7270-4911-a8ea-ec00a8b5dfb8-S31089/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/4b543924-8b3b-4481-9aa0-e804c33a33f9/runs/411cea41-268a-4d88-8fea-1805f4e2d1c4/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_serviceability/classes/1/test/lib' 'jdk.test.lib.apps.LingeredApp' '2c99beff-95bf-4689-bbd4-3d73df6efe58.lck' ]

        com.sun.tools.attach.AttachNotSupportedException: Unable to open socket file /var/folders/q1/xcy7ggg12nsfl896_5c7wmhr0000mv/T/.java_pid43354: target process 43354 doesn't respond within 10500ms or HotSpot VM not loaded
        at jdk.attach/sun.tools.attach.VirtualMachineImpl.<init>(VirtualMachineImpl.java:99)
        at jdk.attach/sun.tools.attach.AttachProviderImpl.attachVirtualMachine(AttachProviderImpl.java:58)
        at jdk.attach/com.sun.tools.attach.VirtualMachine.attach(VirtualMachine.java:207)
        at jdk.jcmd/sun.tools.jcmd.JCmd.executeCommandForPid(JCmd.java:113)
        at jdk.jcmd/sun.tools.jcmd.JCmd.main(JCmd.java:97)

         stdout: [43354:
        ];
         stderr: [com.sun.tools.attach.AttachNotSupportedException: Unable to open socket file /var/folders/q1/xcy7ggg12nsfl896_5c7wmhr0000mv/T/.java_pid43354: target process 43354 doesn't respond within 10500ms or HotSpot VM not loaded
        at jdk.attach/sun.tools.attach.VirtualMachineImpl.<init>(VirtualMachineImpl.java:99)
        at jdk.attach/sun.tools.attach.AttachProviderImpl.attachVirtualMachine(AttachProviderImpl.java:58)
        at jdk.attach/com.sun.tools.attach.VirtualMachine.attach(VirtualMachine.java:207)
        at jdk.jcmd/sun.tools.jcmd.JCmd.executeCom
        result: Error. Agent error: java.lang.Exception: Agent 2 timed out with a timeout of 480 seconds; check console log for any additional details

              Assignee:
              Alex Menkov
              Reporter:
              Marty Thompson
              Votes:
              0 Vote for this issue
              Watchers:
              14 Start watching this issue

                Created:
                Updated:
                Resolved: